# pyrseia

./: LICENSE  Makefile  app.py  pyproject.toml  setup.cfg
contrib/: apple.py  google.py
src/pyrseia/: __init__.py  __main__.py  _api.py  _client.py  _server.py  aiohttp.py  httpx.py  starlette.py  wire.py
stubs/msgpack/: __init__.pyi
tests/: calculator.py  calculator_server.py  conftest.py  test_calculator.py  test_middleware.py
tests/typechecking/: __init__.py  calculator_server.py
